--- a/client/Thesis/Thesis/Base.lproj/Main.storyboard
+++ b/client/Thesis/Thesis/Base.lproj/Main.storyboard
@@ -9,7 +9,7 @@
         <!--Hangman Level View Controller-->
         <scene sceneID="2Pe-vE-o9c">
             <objects>
-                <viewController storyboardIdentifier="HangmanLevelViewController" id="s2J-Mq-6rJ" customClass="HangmanLevelViewController" customModule="Thesis" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="HangmanLevelViewController" id="s2J-Mq-6rJ" customClass="HangmanLevelViewController" customModule="Moot" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="1oy-an-ZFM"/>
                         <viewControllerLayoutGuide type="bottom" id="GhM-h6-dF2"/>
@@ -109,7 +109,7 @@
         <!--Maze Level View Controller-->
         <scene sceneID="Rah-pw-x0J">
             <objects>
-                <viewController id="cjl-pC-x5L" customClass="MazeLevelViewController" customModule="Thesis" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="cjl-pC-x5L" customClass="MazeLevelViewController" customModule="Moot" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="qkm-nh-jZp"/>
                         <viewControllerLayoutGuide type="bottom" id="FEw-Lz-QQM"/>
@@ -201,7 +201,7 @@
         <!--Jigsaw Level View Controller-->
         <scene sceneID="KaS-BI-lkE">
             <objects>
-                <viewController id="lXw-5a-cOg" customClass="JigsawLevelViewController" customModule="Thesis" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="lXw-5a-cOg" customClass="JigsawLevelViewController" customModule="Moot" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="5j9-vq-aHd"/>
                         <viewControllerLayoutGuide type="bottom" id="wPP-x3-9kk"/>
@@ -283,7 +283,7 @@
         <!--Maze Camera View Controller-->
         <scene sceneID="LZD-dm-P7O">
             <objects>
-                <viewController id="jOD-4f-iKs" customClass="MazeCameraViewController" customModule="Thesis" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="jOD-4f-iKs" customClass="MazeCameraViewController" customModule="Moot" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Ei0-Kd-Hd6"/>
                         <viewControllerLayoutGuide type="bottom" id="ZD4-8I-NPF"/>
@@ -325,7 +325,7 @@
         <!--Jigsaw Camera View Controller-->
         <scene sceneID="pIG-vp-vI6">
             <objects>
-                <viewController id="ah2-6R-rKC" customClass="JigsawCameraViewController" customModule="Thesis" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="ah2-6R-rKC" customClass="JigsawCameraViewController" customModule="Moot" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Lhk-cE-Anp"/>
                         <viewControllerLayoutGuide type="bottom" id="RXV-a8-9bJ"/>
@@ -351,7 +351,7 @@
         <!--Hangman Camera View Controller-->
         <scene sceneID="rU6-MS-vO6">
             <objects>
-                <viewController id="oQd-xS-Y4W" customClass="HangmanCameraViewController" customModule="Thesis" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="oQd-xS-Y4W" customClass="HangmanCameraViewController" customModule="Moot" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="TcP-Bz-FBd"/>
                         <viewControllerLayoutGuide type="bottom" id="GsN-la-RM4"/>
@@ -377,7 +377,7 @@
         <!--Level Picker View Controller-->
         <scene sceneID="mTs-UA-ous">
             <objects>
-                <viewController id="Tzp-To-mNT" customClass="LevelPickerViewController" customModule="Thesis" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="Tzp-To-mNT" customClass="LevelPickerViewController" customModule="Moot" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="aT0-iw-nlm"/>
                         <viewControllerLayoutGuide type="bottom" id="XbL-UH-PE1"/>
@@ -396,7 +396,7 @@
                                 <rect key="frame" x="252" y="285" width="97" height="30"/>
                                 <state key="normal" title="Achievements"/>
                                 <connections>
-                                    <segue destination="SJv-9S-btl" kind="show" id="o1q-Yb-2s2"/>
+                                    <segue destination="MPW-ve-gKH" kind="show" id="NJn-l2-dto"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -411,6 +411,22 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wXm-rQ-VKl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="739" y="155"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="McT-VF-CKU">
+            <objects>
+                <navigationController id="MPW-ve-gKH" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ieX-ku-eDk">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="REQ-JS-4sW" kind="relationship" relationship="rootViewController" id="Lmc-ic-Hem"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="L5p-VK-hSl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1551" y="155"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="39w-SJ-Bk6">
@@ -430,45 +446,39 @@
             </objects>
             <point key="canvasLocation" x="739" y="935"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="UjS-42-zyn">
+        <!--Table View Controller-->
+        <scene sceneID="ekL-6N-XhH">
             <objects>
-                <navigationController id="SJv-9S-btl" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="rLO-Pj-neE">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="QZY-pk-tg8" kind="relationship" relationship="rootViewController" id="ZCs-9l-fo4"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="7Yp-cy-ptO" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1551" y="155"/>
-        </scene>
-        <!--Achievements View Controller-->
-        <scene sceneID="h20-Qu-t69">
-            <objects>
-                <viewController id="QZY-pk-tg8" customClass="AchievementsViewController" customModule="Thesis" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="gbH-mK-KIJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="KdY-tZ-u5o"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="9xp-9k-BWm">
+                <tableViewController id="REQ-JS-4sW" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="G0i-7c-wts">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="26a-iH-64b">
-                        <barButtonItem key="leftBarButtonItem" title="Back" id="ka1-Q6-F3k">
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Fx6-aB-tcC">
+                                <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Fx6-aB-tcC" id="Cjl-iJ-XKH">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="REQ-JS-4sW" id="Afp-be-iSV"/>
+                            <outlet property="delegate" destination="REQ-JS-4sW" id="W7N-g6-rpv"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="ULZ-IC-G9G">
+                        <barButtonItem key="leftBarButtonItem" title="Back" id="s3N-88-SS5">
                             <connections>
-                                <segue destination="dYp-ZQ-SLe" kind="unwind" unwindAction="cancelToLevelPicker:" id="xfW-jk-uRo"/>
+                                <segue destination="Con-vr-Nfk" kind="unwind" unwindAction="cancelToLevelPicker:" id="CeH-dc-PaW"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="fjU-d4-5mi" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <exit id="dYp-ZQ-SLe" userLabel="Exit" sceneMemberID="exit"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="J6e-sX-q05" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="Con-vr-Nfk" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="2244" y="155"/>
         </scene>
